name:                css2scss
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/Dimercel/css2scss#readme
license:             BSD3
license-file:        LICENSE
author:              Ito Dimercel
maintainer:          xolcman@gmail.com
copyright:           2015 Ito Dimercel
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Css2Scss
                       Css2Scss.Css
                       Css2Scss.Css.Lexer
                       Css2Scss.Css.Parser
                       Css2Scss.Scss
                       Css2Scss.Scss.Render
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3.1.9
                     , pcre-heavy
  default-language:    Haskell2010

executable css2scss-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , css2scss
                     , parsec >= 3.1.9
                     , pcre-heavy
  default-language:    Haskell2010

test-suite css2scss-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , css2scss
                     , parsec >= 3.1.9
                     , hspec
                     , QuickCheck
  other-modules:       Css2Scss.Test.Lexer
                     , Css2Scss.Test.Parser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Dimercel/css2scss
